# hooked

./: .gitignore  .hooked.json  .hooked.yaml  CMakeLists.txt  README.md
docs/: flow.md
src/: bootstrap.cpp  constants_echo.cpp  echo.cpp  hooks.cpp
src/include/: constants.h  hooksdef.h
